[package]
name = "rustls-ci-bench"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls CPU instruction counting benchmarks."
publish = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.76"
byteorder = "1.4.3"
clap = { version = "4.5.54", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.14"
pki-types = { package = "rustls-pki-types", version = "1" }
rayon = "1.11.0"
rustls = { path = "../rustls", features = ["ring", "aws_lc_rs"] }
rustls-pemfile = "2"
