[package]
name = "rustls-reality"
version = "0.22.0" # keeping version or bumping it, matters less now that name is unique
edition = "2021"
repository = "https://github.com/rustls/rustls"
readme = "../README.md"
description = "Rustls with Reality implementation"
license = "Apache-2.0 OR ISC OR MIT"

[dependencies]
log = { version = "0.4.4", optional = true }
ring = "0.17"
subtle = "2.5.0"
pki-types = { package = "rustls-pki-types", version = "1", features = ["alloc"] }
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc", "std"] }
zeroize = "1.7"
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
curve25519-dalek = "4.1"

[features]
default = ["logging", "std", "tls12"]
logging = ["log"]
std = ["webpki/std", "pki-types/std"]
dangerous_configuration = [] # Feature needed by xray-lite
read_buf = ["rustls-pki-types/std"] # Feature needed by xray-lite
tls12 = []
secret_extraction = []
quic = []

[dev-dependencies]
env_logger = "0.10"
